# veloura-store-online

backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/: route.py
backend/app/api/auth/: route.py
backend/app/api/user/: route.py
backend/app/core/: config.py  server.py  session.py
backend/app/core/dependencies/: authentication.py  get_current_user.py
backend/app/core/security/: __init__.py  _init__.py  jwt_handler.py  password_hasher.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/utils/: __init__.py  get_timestamp.py
